--- a/app/views/importer/show.html.erb
+++ b/app/views/importer/show.html.erb
@@ -13,7 +13,25 @@
 <br>
 <%= link_to "Delete All Trials", importer_delete_all_path, method: :post %><br>
 <br>
-<%= link_to "View All Trials", root_path %><br>
+
+<%= link_to "View All Trials", trials_path %><br>
+
+<br>
+<hr>
+<p><%= "There are #{@trials.all.count} trials with #{@sites.all.count} site locations."  %></p>
+<p><%= "There are #{@sites.geocoded.count} geocoded sites but #{@sites.not_geocoded.count} are not geocoded."  %></p>
+<hr>
+<h3>Sites Not Geocoded</h3>
+<% @sites.not_geocoded.each do |site| %>
+	<% unless site.trial.nil? %>
+		<%= link_to truncate(site.trial.title, :length => 50), site.trial %>
+		<%= "(#{site.facility})" %>
+	<% end %>
+	<br>
+<% end %>
+<br>
+
+
 <!-- 
 <%= link_to "Send new match emails", importer_new_match_alert_path %>
  -->
