--- a/app/assets/stylesheets/trials.css.scss
+++ b/app/assets/stylesheets/trials.css.scss
@@ -73,6 +73,9 @@
 		margin-bottom: 2em;
 		background: #F6F6F6;
 		padding: 20px;
+		border: 1px solid #E5E5E5;
+		border-radius: 5px;
+		-webkit-border-radius: 5px;
 	}
 	.trialResults a:hover{
 		text-decoration: none;
