Removed previous next from bottom of the trial show page

--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -191,9 +191,9 @@
     </div>
 
     <br>
-    <div>
+<!--     <div>
         <%= link_to raw('Previous Trial'), trial_path(@previous_trial) %>     |    <%= link_to raw('Next Trial'), trial_path(@next_trial) %> 
-    </div>
+    </div> -->
 <!--     <div id="rightSideCallouts">
         <div style="height:100px; width:100%; background-color:orange; margin:0.83em 0;">
             <h2>Coming soon...</h2>
